Clean up repository - remove test and development files
- Remove Claude Flow metrics and swarm files
- Remove test scripts and debug guides
- Remove duplicate package_workflow.py from workflow dir
- Update .gitignore to exclude development artifacts
- Keep only essential workflow files for distribution

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,18 @@ htmlcov/
 
 # Logs
 *.log
+
+# Development/test files
+test_*.py
+DEBUG_GUIDE.md
+workflow/test_*.py
+workflow/test_*.json
+workflow/package_workflow.py
+*.txt.placeholder
+icon_placeholder.txt
+
+# Claude Flow / Swarm files
+.claude-flow/
+.swarm/
+workflow/.claude-flow/
+workflow/.swarm/
