Initial release of FOCAL - Simple Alfred workflow for Fantastical calendar events
FOCAL (Fantastical OpenAI Calendar Alfred Linker) transforms natural language
into perfectly formatted calendar events using OpenAI for reliable parsing.

Features:
- Natural language event creation with 'focal' keyword
- Support for recurring events
- OpenAI-powered intelligent parsing
- Self-contained package with embedded dependencies
- Simple, clean implementation (~100 lines of code)

Built with security in mind - API keys properly protected and input sanitized.

--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,8 @@ htmlcov/
 
 # Development/test files
 test_*.py
+test_*.json
 DEBUG_GUIDE.md
-workflow/test_*.py
-workflow/test_*.json
-workflow/package_workflow.py
 *.txt.placeholder
 icon_placeholder.txt
 
